@@ -2,6 +2,16 @@
 \title{Minfi News}
 \encoding{UTF-8}
 
+\section{Version 1.14}{
+  \itemize{
+    \item read.450k.GEO added to read directly from GEO and create a
+  GenomicsRatioSet. Thanks Tim Triche for writing the original function.
+  \item makeGenomicRatioSetFromMatrix added. This function turns a
+  matrix into a GenomicRatioSetFromMatrix. The 450K feature IDs need to
+  be supplied or in the rownames of the matrix.
+  }
+}
+
 \section{Version 1.13}{
   \itemize{
     \item read.450k.exp has support for argument base when targets is
